--- a/assets/demo.html
+++ b/assets/demo.html
@@ -29,60 +29,10 @@
             <input name="hello" value="world">
         </p>
 
-        <div class="ncaptcha">
-
-            <div class="ncaptcha-base">
-
-                <div class="ncaptcha-container">
-                    <div class="ncaptcha-checkbox"></div>
-
-                    <div class="ncaptcha-spinner" style="display: none;"></div>
-
-                    <div class="ncaptcha-checkmark" style="display: none;">
-                        <img src="/assets/checkmark.svg">
-                    </div>
-
-                    <div class="ncaptcha-text">I'm not a human</div>
-
-                    <div class="ncaptcha-info">
-                        <img src="/assets/icon.svg" width="32px" height="32px">
-                        <div>nCAPTCHA</div>
-                        <div>Source code</div>
-                    </div>
-                </div>
-
-                <dialog class="ncaptcha-dialog">
-
-                    <div class="ncaptcha-question">
-                        <div class="ncaptcha-title">
-                            Select all images with
-                            <strong>traffic lights</strong>
-                            Click verify once there are none left.
-                        </div>
-                        <div class="ncaptcha-images">
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image" style="transform: scale(0.8);">
-                                <img class="ncaptcha-select" src="/assets/checkmark-circle.svg">
-                            </div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                            <div class="ncaptcha-image"></div>
-                        </div>
-                    </div>
-
-                    <div class="ncaptcha-actions">
-                        <button class="ncaptcha-verify-btn" type="button">VERIFY</button>
-                    </div>
-
-                </dialog>
-
-            </div>
-
-        </div>
+        <div class="ncaptcha"></div>
+        <div class="ncaptcha"></div>
+        <div class="ncaptcha"></div>
+        <div class="ncaptcha"></div>
 
         <button type="submit">Submit</button>
 
